<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Incant! ⚡⚡</string>
  <string name="app_name_story_details">Incant! ⚡⚡ &gt; Story Details</string>
  <string name="app_name_story_download">Incant! ⚡⚡ &gt; Download Story</string>
  <string name="activity_name_about_app">Incant! ⚡⚡ &gt; About App</string>
  <string name="action_about_app">About Incant! ⚡⚡</string>

  <string name="download">Download</string>
  <string name="play">Play</string>
  <string name="delete_story">Delete story</string>
  <string name="delete_save">Delete save file</string>
  <string name="scrape">Get more</string>
  <string name="downloaded_recently">Downloaded %tr</string>
  <string name="downloaded_at">Downloaded %tD</string>
  <string name="saved_recently">Saved %tr</string>
  <string name="saved_at">Saved %tD</string>
  <string name="play_zcode">[Z-code]</string>
  <string name="play_glulx">[Glulx]</string>

  <string name="keyboard">Keyboard</string>
  <string name="skip">Skip</string>
  <string name="next">Next</string>

  <string name="name">Name</string>
  <string name="url">URL</string>
  <string name="ifarchive">(ifarchive)</string>
  <string name="zip_entry">ZIP entry</string>
  <string name="ifarchive_download_url_input_prefix">http://mirror.ifarchive.org/if-archive/games/</string>

  <string name="download_failed">Failed download: %s</string>
  <string name="download_invalid">Invalid download: %s</string>

  <string name="cover_image">Cover image</string>

  <string name="ifdb_viewgame">http://ifdb.tads.org/viewgame?ifid=%s</string>
  <string name="ifdb_label">Go to IFDB</string>
  <string name="ifdb_text">View this story in the Interactive Fiction Database</string>

  <string name="action_speech_output">Speech Out Enabled</string>
  <string name="action_speech_input">Speech Input Enabled</string>
  <string name="action_settings">Settings</string>
  <string name="action_profile">Profile Performance</string>
  <string name="action_speech_input_beepmute">Speech In Beep Mute</string>
  <string name="action_onscreen_debug">Show Debug</string>
  <string name="action_glk_auto_enter_char_input">Auto enter char</string>

  <string name="play_via_external_engine_provider">Via Thunderword</string>
  <string name="app_website_link0">http://www.WakeReality.com</string>
  <string name="app_website_link1">https://github.com/WakeRealityDev/incant</string>

  <string name="about_intro1">This app was created as a technical demonstration of speech output and voice recognition in playing of classic parser Interactive Fiction stories. Please note the opening activity menu options to enable speech output and recognition. TECHNICAL NOTE: Incant has a custom Java Glulx internal interpreter that can run many stories. However, it can be too slow for complex Interactive Fiction works such as Emily Short\'s Counterfeit Monkey story.</string>
  <string name="app_intro3">This app is entirely free software and the source code is available on GitHub. You are encouraged to further refine and utilize this app\'s Java source code for Android:</string>
  <string name="about_intro2">This app variation, \'Incant! for Thunderword\', was extended by Wake Reality to serve as a technical demonstration of a third-party story download and launcher app for Thunderword\'s internal Glulx and Z-Machine interpreter engines.</string>
  <string name="app_intro4">Special note about story data files, works of Interactive Fiction: No works are included with the download of this app. Incant!\'s opening menu is only a description and link to the stories off various public websites. Only once a story is picked from the menu is it downloaded live off the internet website. Incant! does not distribute the copyrighted story data files on it\'s own. You can long-press the menu entry to see a link to information about the story author.</string>

  <string name="main_intro_title0">Welcome to Wake Reality\'s Incant! for Thunderword</string>
  <string name="main_intro_title0_styled">Welcome to Wake Reality\'s <b>Incant! for Thunderword</b></string>
  <string name="main_intro_message0">Pick from the list to download stories, or you can use Chrome / Firefox / other web browsers to download and open story files. This is open source, free software, published on GitHub.com. Thank you!</string>
  <string name="main_intro_message1">TIP: Long-press entries to access additional options, including Thunderword launch.</string>
  <string name="main_intro_message0_styled">Pick from the list to download stories, or you can use Chrome / Firefox /  other web browsers to download and open story files. This is open source, free software, published on GitHub.com. Thank you!  <b>TIP:</b> Long-press entries to access additional options, including <i>Thunderword</i> launch.</string>
  <string name="main_intro_message1_styled"></string>
  <string name="main_intro_button_label0">[ Hide this message ]</string>

  <string name="external_provider_noprompt">Interrupt story</string>
  <string name="external_provider_activity_label">Activity</string>
  <string name="main_top_error_storagepermission">Incant! needs public write storage permission to download stories and launch Thunderword.</string>
  <string name="main_top_error_storage_try">[ Try Again ]</string>

  <string name="engine_none_detected_invite">Thunderword or other engine provider apps have not been detected on your Android system. For additional compatibility and faster performance with some fiction stories, we invite you to install the Thunderword app on your system and new options will appear to launch this story to the partner app. Thunderword app pre-release link:</string>
  <string name="engine_provider_store_link0">https://play.google.com/apps/testing/com.wakereality.thunderword.experimental</string>

  <!-- uses Square library Phrase -->
  <string name="engine_provider_detected_named">Interactive Fiction engine provider: <b>{engine}</b>{extra_a}</string>
  <string name="engine_provider_detected_extra"> [{quantity} detected]</string>
    <string name="action_story_database_test">Story DB Test</string>
</resources>
