<?xml version="1.0" encoding="utf-8"?>
<com.yrek.incant.SubactivityView
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/subactivity_view"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   >

  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
	 android:paddingTop="4dp"
	 android:paddingLeft="5dp"
	 android:paddingRight="5dp"
     >
    <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       >
		  <ImageView
		 android:layout_width="150dp"
		 android:layout_height="150dp"
		 android:layout_alignParentTop="true"
		 android:layout_alignParentRight="true"
		 android:id="@+id/cover"
		 android:scaleType="centerInside"
		 android:contentDescription="@string/cover_image"
		 />
		  <LinearLayout
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:layout_alignParentTop="true"
		 android:layout_toLeftOf="@id/cover"
		 android:orientation="vertical"
		 >
		<TextView
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   android:id="@+id/name"
		   />
		<TextView
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   android:id="@+id/author"
		   />
		  </LinearLayout>
    </RelativeLayout>

    <TableLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       >
		  <TableRow
		 android:id="@+id/play_container"
		 >
			<Button
			   android:layout_column="1"
			   android:layout_span="1"
			   android:text="@string/play"
			   android:id="@+id/play"
			   />
			<TextView
			   android:layout_column="2"
			   android:layout_span="1"
			   android:id="@+id/play_text"
			   android:scrollHorizontally="true"
			   android:ellipsize="marquee"
			   />
      </TableRow>
	  <TableRow
			android:id="@+id/play_via_external_engine_provider_container"
			>
			<Button
				android:layout_column="1"
				android:layout_span="1"
				android:text="@string/play_via_external_engine_provider"
				android:id="@+id/play_via_external_engine_provider"
				/>
			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>
				<Spinner
					android:id="@+id/external_provider_activity"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:entries="@array/thunderword_activity_names"
					android:entryValues="@array/thunderword_activity_values"
					/>
				<TextView
					android:id="@+id/external_provider_activity_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toRightOf="@id/external_provider_activity"
					android:layout_alignBaseline="@+id/external_provider_activity"
					android:paddingLeft="4dp"
					android:text="@string/external_provider_activity_label"
					/>
				<CheckBox android:id="@+id/external_provider_noprompt"
						  android:layout_width="wrap_content"
						  android:layout_height="wrap_content"
						  android:layout_marginLeft="4dp"
						  android:paddingLeft="2dp"
						  android:paddingRight="3dp"
						  android:text="@string/external_provider_noprompt"
						  android:background="#E8FFFF"
						  android:layout_toRightOf="@+id/external_provider_activity_label"
						  android:layout_alignBaseline="@+id/external_provider_activity"
						  android:onClick="onProviderInterruptClicked"
						  android:checked="true"
					/>
			</RelativeLayout>
	  </TableRow>
      <TableRow>
			<RelativeLayout
			   android:layout_column="1"
			   android:layout_span="1"
			   >
			  <ProgressBar
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:id="@+id/progressbar"
				 android:indeterminate="true"
				 />
			  <Button
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:text="@string/download"
				 android:id="@+id/download_delete"
				 />
			</RelativeLayout>
			<TextView
			   android:layout_column="2"
			   android:layout_span="1"
			   android:id="@+id/download_delete_text"
			   android:scrollHorizontally="true"
			   android:ellipsize="marquee"
			   />
      </TableRow>
      <TableRow
	 android:id="@+id/save_container"
	 >
			<Button
			   android:layout_column="1"
			   android:layout_span="1"
			   android:text="@string/delete_save"
			   android:id="@+id/delete_save"
			   />
			<TextView
			   android:layout_column="2"
			   android:layout_span="1"
			   android:id="@+id/save_text"
			   android:scrollHorizontally="true"
			   android:ellipsize="marquee"
			   />
      </TableRow>
      <TableRow
	 android:id="@+id/ifdb_container"
	 >
			<Button
			   android:layout_column="1"
			   android:layout_span="1"
			   android:text="@string/ifdb_label"
			   android:id="@+id/ifdb"
			   />
			<TextView
			   android:layout_column="2"
			   android:layout_span="1"
			   android:text="@string/ifdb_text"
			   />
      </TableRow>
    </TableLayout>

	  <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/description"
       />

	  <View
		  android:layout_width="match_parent"
		  android:layout_height="2dp"
		  android:layout_marginTop="3dp"
		  android:layout_marginBottom="3dp"
		  android:background="#FFE082"
		  android:visibility="visible"
		  />

	  <TextView
	   android:layout_width="match_parent"
	   android:layout_height="wrap_content"
	   android:id="@+id/storyextra0"
	  />
	  <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/download_text"
       android:scrollHorizontally="true"
       android:ellipsize="marquee"
	   android:textIsSelectable="true"
       />
	  <TextView
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:id="@+id/engine_provider_status"
		  android:scrollHorizontally="true"
		  android:ellipsize="marquee"
		  android:textIsSelectable="true"
		  />

	  <LinearLayout
		  android:id="@+id/engine_provider_suggestion"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:orientation="vertical"
		  android:visibility="gone"
		  >

		  <View
			  android:layout_width="match_parent"
			  android:layout_height="2dp"
			  android:layout_marginTop="2dp"
			  android:layout_marginBottom="2dp"
			  android:background="#FFE082"
			  android:visibility="visible"
			  />

		  <TextView
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="Thunderword or other engine provider apps have not been detected on your Android system. For additional compatibility and faster perofrmance with some fiction stories, we invite you to install Thunderword app on your system and new options will appear to launch this story to the partner app. Thunderword app pre-release link:"
			  />
		  <!-- ToDo: substitute Amazon app store / F-Droid if Google Play store is not installed on device? -->
		  <TextView
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="https://play.google.com/apps/testing/com.wakereality.thunderword.experimental"
			  android:autoLink="web"
			  android:linksClickable="true"
			  />
	  </LinearLayout>
  </LinearLayout>

</com.yrek.incant.SubactivityView>
